# 10mb-video

./: .gitignore  Dockerfile  README.md  app.py  bench.py  compressor.py  pyproject.toml  utils.py
.github/workflows/: main.yml
js/: to_custom.js  to_presets.js
